--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+WILL BE DEPRECATED.  EACH CLASS HAS ITS OWN REPO NOW
 The code in this repository is intended to support Acquia training programs.
 
 Please use it as reference for your own projects.
