the "download" link is gone. now, click zip.

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-WILL BE DEPRECATED.  EACH CLASS HAS ITS OWN REPO NOW
+
+To download files click the "ZIP" link above.
+
 The code in this repository is intended to support Acquia training programs.
 
 Please use it as reference for your own projects.
