--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-
-To download files click the "ZIP" link above.
+To download files click the "Download ZIP" link in the right sidebar -->
 
 The code in this repository is intended to support Acquia training programs.
 
