--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-To download files click the "Download ZIP" link in the right sidebar -->
+The Theming course has been updated and files moved. 
 
-The code in this repository is intended to support Acquia training programs.
+The files are now located at http://bit.ly/d7themingzips 
 
-Please use it as reference for your own projects.
+
